--- a/The Math/OnboardingLocationView.xib
+++ b/The Math/OnboardingLocationView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -13,7 +13,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="79n-AG-Xl2">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
-                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9iG-9i-A84">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9iG-9i-A84">
                             <rect key="frame" x="100" y="134" width="400" height="331"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location permission" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ToB-kt-znT" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
@@ -180,13 +180,13 @@
                     <exclude reference="627-ND-Zw3"/>
                 </mask>
                 <mask key="constraints">
-                    <exclude reference="Lbt-mY-MQM"/>
-                    <exclude reference="RUp-0K-Tvh"/>
-                    <exclude reference="uNu-zW-HL7"/>
                     <exclude reference="3zt-iy-3G9"/>
                     <exclude reference="GKs-pO-OwE"/>
                     <exclude reference="X5b-wi-IqC"/>
                     <exclude reference="gqy-9l-bt5"/>
+                    <exclude reference="Lbt-mY-MQM"/>
+                    <exclude reference="RUp-0K-Tvh"/>
+                    <exclude reference="uNu-zW-HL7"/>
                 </mask>
             </variation>
             <variation key="heightClass=regular-widthClass=compact">
@@ -195,13 +195,13 @@
                     <include reference="627-ND-Zw3"/>
                 </mask>
                 <mask key="constraints">
-                    <include reference="Lbt-mY-MQM"/>
-                    <include reference="RUp-0K-Tvh"/>
-                    <include reference="uNu-zW-HL7"/>
                     <include reference="3zt-iy-3G9"/>
                     <include reference="GKs-pO-OwE"/>
                     <include reference="X5b-wi-IqC"/>
                     <include reference="gqy-9l-bt5"/>
+                    <include reference="Lbt-mY-MQM"/>
+                    <include reference="RUp-0K-Tvh"/>
+                    <include reference="uNu-zW-HL7"/>
                 </mask>
             </variation>
             <connections>
